--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: dislocker
 Section: admin
 Priority: optional
 Maintainer: hermlnx <hbeval1@gmail.com>
-Build-Depends: debhelper (>= 8.0.0), cmake (>= 2.6.0), make (>= 3.8.0), libfuse-dev (>= 2.6.0), libpolarssl-dev, ruby-dev (>= 1.9.0)
+Build-Depends: debhelper (>= 8.0.0), cmake (>= 2.6.0), make (>= 3.8.0), libfuse-dev (>= 2.6.0), libmbedtls-dev, ruby-dev (>= 1.9.0)
 Standards-Version: 3.9.6
 Homepage: http://www.hsc.fr/ressources/outils/dislocker/
 #Vcs-Git: git://git.debian.org/collab-maint/dislocker.git
